--- a/pages/index.css
+++ b/pages/index.css
@@ -1,257 +1,10 @@
-.page {
-  font-family: Inter, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  background-image: url(../images/background_header.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #fff;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style-type: none;
-  gap: 20px;
-  font-size: 16px;
-  font-weight: 500;
-  font-style: normal;
-  font-family: Inter;
-}
-
-.nav__link {
-  color: #000;
-  text-decoration: none;
-}
-
-.header__title {
-  max-width: 729px;
-  font-size: 60px;
-  line-height: 72px;
-  font-style: normal;
-  font-family: "Inter";
-  margin: 183px 0 0;
-  letter-spacing: -0.6px;
-  font-weight: 500;
-}
-
-.header__description {
-  margin: 28px 0 0;
-  line-height: 30px;
-  font-size: 20px;
-  max-width: 683px;
-  font-weight: normal;
-  font-style: normal;
-  font-family: "Noto Serif";
-}
-
-.header__span-accent {
-  display: block;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-  letter-spacing: -0.6px;
-  color: #2f80ed;
-}
-
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-  margin-top: auto;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-}
-
-.header__paragraph {
-  margin: 0;
-}
-
-.header__image {
-  position: absolute;
-  max-width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  background-image: url(../images/background_recipes.svg);
-  background-color: #0a2750;
-  background-size: cover;
-  background-position: center 80px;
-  background-repeat: no-repeat;
-}
-
-.recipes__iframe {
-  height: 315px;
-  width: 560px;
-  border: none;
-}
-
-.recipes__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-size: 44px;
-  font-weight: 500;
-  color: #fff;
-  margin-right: 80px;
-  margin-top: 100px;
-  max-width: 580px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  max-width: 438px;
-  margin-bottom: 80px;
-  margin-top: 24px;
-  color: #fff;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  line-height: 30px;
-  font-size: 20px;
-  font-weight: 500;
-  font-style: normal;
-  font-family: Inter;
-  color: #fff;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-}
-
-.reservation {
-  padding: 100px 0 120px;
-  background-image: url(../images/background_reservation.svg);
-  background-color: #d9e7ff;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  text-align: center;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  margin: 0 auto;
-}
-
-.form {
-  max-width: 385px;
-}
-
-.form__fieldset {
-  padding: 0;
-  margin: 0;
-  border: none;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__lablel {
-  margin-bottom: 32px;
-  display: block;
-}
-
-.form__label_type_checkbox {
-  display: flex;
-  justify-content: center;
-  gap: 12px;
-  border-radius: 2px;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 20px;
-}
-
-.form__input {
-  display: block;
-  padding: 0;
-  width: 100%;
-  box-sizing: border-box;
-  margin-top: 8px;
-  height: 60px;
-  border-radius: 4px;
-  font-family: inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-  padding-left: 10px;
-  margin-bottom: 32px;
-}
-
-.form__button {
-  width: 100%;
-  padding: 0;
-  margin-bottom: 32px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  height: 60px;
-  background-color: #2f80ed;
-  color: #fff;
-  cursor: pointer;
-  transition: opacity 0.3s ease;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/about.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/footer.css);
